# Proyecto-Dise-o-y-validaci-n-de-Firmware-para-SSDs-Equipo-1

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: default_config.json
docs/: architecture.md
include/: config_manager.h  io_operations.h  logger.h  nvme_device.h  performance_tests.h  reliability_tests.h  report_generator.h  system_interface.h  test_manager.h
nvme_tester_python/: README.md  ejemplo_uso_logger.py  main.py  requirements.txt
nvme_tester_python/config/: DEPLOY_KEY_SETUP.md  setup_deploy_key.sh  ssh_config
nvme_tester_python/config/team_ssh_setup/: README.md  install_team_key.sh  ssh_config  team_key  team_key.pub
nvme_tester_python/docs/: DocumentacionGeneral.txt  NVMe Test Cases.docx
nvme_tester_python/src/: admin_passthru_wrappper.py  error_report.py  logger.py  nvme_wrapper.py  test_manager.py
nvme_tester_python/tests/: test_id_control.py  test_logger.py  test_smart_log.py  test_smart_log_healt.py
nvme_tester_python/utils/: get_ID_NS.py  get_ID_NS_.py  get_features_wrapper.py  get_smart_log.py
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
