# CMakeLists.txt para el directorio tests

enable_testing()

# Buscar GoogleTest
find_package(GTest)
if(NOT GTest_FOUND)
    include(FetchContent)
    FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ad33e39068b21b55b3de18e4a7c7.zip
    )
    FetchContent_MakeAvailable(googletest)
endif()

# Tests unitarios
add_executable(unit_tests
    test_nvme_device.cpp
    test_performance_tests.cpp
    test_reliability_tests.cpp
    test_config_manager.cpp
    test_logger.cpp
)

target_link_libraries(unit_tests
    gtest_main
    gtest
    pthread
)

# Tests de integración
add_executable(integration_tests
    integration_test_full_suite.cpp
    integration_test_device_detection.cpp
)

target_link_libraries(integration_tests
    gtest_main
    gtest
    pthread
)

# Agregar tests al sistema de testing de CMake
add_test(NAME UnitTests COMMAND unit_tests)
add_test(NAME IntegrationTests COMMAND integration_tests)

# Crear archivos de test stub
file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/test_nvme_device.cpp
"#include <gtest/gtest.h>\n"
"#include \"nvme_device.h\"\n"
"\n"
"class NVMeDeviceTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(NVMeDeviceTest, DeviceInitialization) {\n"
"    // TODO: Implementar test de inicialización\n"
"    EXPECT_TRUE(true);\n"
"}\n"
"\n"
"TEST_F(NVMeDeviceTest, DeviceInfo) {\n"
"    // TODO: Implementar test de información del dispositivo\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/test_performance_tests.cpp
"#include <gtest/gtest.h>\n"
"#include \"performance_tests.h\"\n"
"\n"
"class PerformanceTestsTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(PerformanceTestsTest, SequentialRead) {\n"
"    // TODO: Implementar test de lectura secuencial\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/test_reliability_tests.cpp
"#include <gtest/gtest.h>\n"
"#include \"reliability_tests.h\"\n"
"\n"
"class ReliabilityTestsTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(ReliabilityTestsTest, DataIntegrity) {\n"
"    // TODO: Implementar test de integridad de datos\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/test_config_manager.cpp
"#include <gtest/gtest.h>\n"
"#include \"config_manager.h\"\n"
"\n"
"class ConfigManagerTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(ConfigManagerTest, LoadConfig) {\n"
"    // TODO: Implementar test de carga de configuración\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/test_logger.cpp
"#include <gtest/gtest.h>\n"
"#include \"logger.h\"\n"
"\n"
"class LoggerTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(LoggerTest, LoggingLevels) {\n"
"    // TODO: Implementar test de niveles de logging\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/integration_test_full_suite.cpp
"#include <gtest/gtest.h>\n"
"\n"
"class FullSuiteIntegrationTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(FullSuiteIntegrationTest, CompleteTestSuite) {\n"
"    // TODO: Implementar test de integración completo\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/integration_test_device_detection.cpp
"#include <gtest/gtest.h>\n"
"\n"
"class DeviceDetectionIntegrationTest : public ::testing::Test {\n"
"protected:\n"
"    void SetUp() override {}\n"
"    void TearDown() override {}\n"
"};\n"
"\n"
"TEST_F(DeviceDetectionIntegrationTest, AutoDetectDevices) {\n"
"    // TODO: Implementar test de detección automática\n"
"    EXPECT_TRUE(true);\n"
"}\n"
)
